(#71) fix abstraction slider align, motifpanel shade

--- a/neuronal_motifs/client/src/components/AbstractionSlider.css
+++ b/neuronal_motifs/client/src/components/AbstractionSlider.css
@@ -1,7 +1,8 @@
 #abstraction-slider-div {
     position: absolute;
     bottom: 1vh;
-    left: 45vw;
+    /*left: 45vw;*/
+    right: -99vw;
     width: 50vw;
     padding: 5px;
     background-color: rgba(255, 255, 255, 0.75);
