--- a/neuronal_motifs/client/src/components/MotifPanel.css
+++ b/neuronal_motifs/client/src/components/MotifPanel.css
@@ -15,7 +15,7 @@
     padding: 5px;
     background-color: rgba(255, 255, 255, 0.5);
     border-radius: 10px;
-    box-shadow: rgba(0, 0, 0, 0.35) 0px 0px 15px;
+    box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
     z-index: 2;
 }
 
